2025-08-18T01:00:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17028235623 # 739
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-18
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 898 1376 / 907 1386
* notice: next accum: outdated-unq outdated-all / unq all: 899 1377 / 907 1386
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-04] / []

2025-08-17T01:00:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17014877096 # 738
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-17
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 897 1375 / 907 1386
* notice: next accum: outdated-unq outdated-all / unq all: 898 1376 / 907 1386
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-03] / []

2025-08-16T00:54:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17002330804 # 737
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-16
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 895 1373 / 907 1386
* notice: next accum: outdated-unq outdated-all / unq all: 897 1375 / 907 1386
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-01 2025-08-02] / []

2025-08-15T00:57:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16980249594 # 736