@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-18T01:00:28Z",
-  "count_outdated" : 1377,
-  "uniques_outdated" : 899,
+  "timestamp" : "2025-08-21T00:52:00Z",
+  "count_outdated" : 1380,
+  "uniques_outdated" : 901,
   "count" : 1386,
   "uniques" : 907,
   "clones" : [
-    {
-      "timestamp": "2025-08-06T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-08-07T00:00:00Z",
       "count": 1,
