@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 3,
+  "count": 6,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-08-06T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-08-07T00:00:00Z",
       "count": 1,
