@@ -1,3 +1,12 @@
+2025-08-21T00:52:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17114039063 # 742
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-21
+* notice: last 14d: unq all: 2 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 899 1377 / 907 1386
+* notice: next accum: outdated-unq outdated-all / unq all: 901 1380 / 907 1386
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-06] / []
+
 2025-08-18T01:00:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17028235623 # 739
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-18
